[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/images/bars/healthbar.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/Inventory/newInventory/NewInventory.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/Inventory/newInventory/EquipSlots.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/UI/FontSmal.tres" type="DynamicFont" id=4]

[node name="NewInventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1200.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
margin_right = 720.0
margin_bottom = 720.0
rect_min_size = Vector2( 720, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="HBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="HBoxContainer/NinePatchRect/M"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 700.0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/NinePatchRect/M/V"]
margin_right = 680.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 720.0
margin_right = 1080.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="EquipSlots" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 480.0
rect_min_size = Vector2( 360, 480 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Back"
[connection signal="ItemSet" from="HBoxContainer/VBoxContainer/EquipSlots" to="." method="_on_item_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
